--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <main class="content-wrapper">
   <header class="white-text-container section-container">
     <div class="text-center">
-      <h1>I am Deepankar Chakraborty</h1>
-      <p>Web designer</p>
+      <h1 class="animate-charcter">I am Deepankar Chakraborty</h1>
+      <p>Programmer</p>
       <p>
         <a class="fa-icon fa-icon-2x" href="https://facebook.com/" title="">
           <i class="fa fa-facebook"></i>
@@ -57,17 +57,16 @@
    <div class="row">
      <div class="col-xs-12">
 
-        <div class="card">
+        <div class="card1">
           <div class="card-block">
-            <h2>About me</h2>
+          <div class="title_card">
+            <!-- <h2>About me</h2> --> 
             <div class="row">
               <div class="col-md-4">
-                <p><img src="./assets/images/img-01.jpg" class="img-responsive" alt=""></p>
+                <!--<p><img src="./assets/images/img-01.jpg" class="img-responsive" alt=""></p>  --> 
               </div>
+            </div>
               <div class="col-md-8">
-
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
               </div>
             </div>
